modefiy existing file

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -12,9 +12,9 @@
     />
     <div class="card-body">
       <p class="card-text">
-        <%=listing.description%> <br />
+        <%=listing.description%><br />
         &#8377; <%=listing.price%> /Night <br />
-        <%=listing.location%>
+        <%= listing.location %>
         <br />
         <%=listing.country%>
       </p>
@@ -29,7 +29,7 @@
       >Edit
     </a>
 
-    <form method="DELETE" action="/listings/<%=listing._id %>">
+    <form method="POST" action="/listings/<%=listing._id %>?_method=DELETE">
       <button class="btn btn-dark offset-4">delete</button>
     </form>
   </div>
