--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -79,6 +79,12 @@
         <p class="card-text"><%= review.comment %></p>
         <p class="card-text"><%= review.rating %> star</p>
       </div>
+      <form
+        method="POST"
+        action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE"
+      >
+        <BUtton class="btn btn-sm btn-dark">Delete</BUtton>
+      </form>
     </div>
     <%}%>
   </div>
